Some cosmetic changes to docs
* Redo section titles to use H1
* Put references in the see also in an info admonition

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,3 +1,9 @@
 :root {
   --md-tooltip-width: 600px;
 }
+
+.md-typeset .admonition,
+.md-typeset details {
+  border-width: 0;
+  border-left-width: 4px;
+}
